@@ -16,8 +16,11 @@ static void list_apps (int hours) {
 
     // Build our time_period parameter.
     ostrstream time_period_stream;
-    time_period_stream << hours << "HOUR";
+    time_period_stream << hours << "HOUR" << ends;
     string time_period = time_period_stream.str();
+
+    // (Ask the ostrstream to reclaim ownership of its buffer.)
+    time_period_stream.freeze(false);
 
     // Assemble our meerkat query recipe.
     XmlRpcValue recipe = XmlRpcValue::makeStruct();
