@@ -1,0 +1,32 @@
+// SystemProxy.cc - xmlrpc-c C++ proxy class
+// Auto-generated by xml-rpc-api2cpp.
+
+#include <XmlRpcCpp.h>
+#include "SystemProxy.h"
+
+XmlRpcValue /*array*/ SystemProxy::listMethods () {
+    XmlRpcValue params = XmlRpcValue::makeArray();
+    XmlRpcValue result = this->mClient.call("system.listMethods", params);
+    return result;
+}
+
+XmlRpcValue /*array*/ SystemProxy::methodSignature (string string1) {
+    XmlRpcValue params = XmlRpcValue::makeArray();
+    params.arrayAppendItem(XmlRpcValue::makeString(string1));
+    XmlRpcValue result = this->mClient.call("system.methodSignature", params);
+    return result;
+}
+
+string SystemProxy::methodHelp (string string1) {
+    XmlRpcValue params = XmlRpcValue::makeArray();
+    params.arrayAppendItem(XmlRpcValue::makeString(string1));
+    XmlRpcValue result = this->mClient.call("system.methodHelp", params);
+    return result.getString();
+}
+
+XmlRpcValue /*array*/ SystemProxy::multicall (XmlRpcValue /*array*/ array1) {
+    XmlRpcValue params = XmlRpcValue::makeArray();
+    params.arrayAppendItem(array1);
+    XmlRpcValue result = this->mClient.call("system.multicall", params);
+    return result;
+}
